--- a/app/globals.css
+++ b/app/globals.css
@@ -4,8 +4,8 @@
 
 @layer base {
   :root {
-    /* --background: 0 0% 100%; hsl */
-    --background: 225 20% 96%; /* hsl */
+    --background: 0 0% 100%;
+    /* --background: 225 20% 96%; hsl */
     --foreground: 222.2 84% 4.9%;
 
     --card: 0 0% 100%;
